--- a/nginx/api-gateway-hello/docker-compose.yaml
+++ b/nginx/api-gateway-hello/docker-compose.yaml
@@ -1,4 +1,4 @@
-# docker run --name bba-nginx -d -p 8080:80 nginx:1.22.0-alpine 
+# docker run --name bb-nginx -d -p 8080:80 nginx:1.22.0-alpine 
 
 version: '3'
 
